# Claude-Artifacts

./: .gitignore  AUDIT_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_OLD.md  SECURITY_CONFIG.md  pyproject.toml  pytest.ini  test_results.json  test_suite.py
app-analyzer/: artifact_manager.py  package-lock.json  package.json
app-analyzer/src/: App.jsx
app-analyzer/src/claude_artifacts/: color-picker.jsx  expense-tracker.jsx  sample-dashboard.jsx
app-analyzer/src/components/: ArtifactLoader.jsx  DependencyAnalyzer.jsx  ErrorBoundary.jsx
app-analyzer/src/components/ui/: ReactEnvironmentWrapper.js  card.jsx  slider.jsx
app-analyzer/src/services/: artifactAnalyzer.js  artifactValidator.js
docs/: .placeholder  POTENTIAL_UPGRADES.md  ROADMAP_PLANNING.md
jules-scratch/verification/: verify_artifact_loading.py
src/claude_artifact_manager/: cli.py  manager.py
src/claude_artifact_manager/templates/: App.jsx.template  index.html.template  main.jsx.template
src/claude_artifact_manager/templates/components/ui/: ReactEnvironmentWrapper.js  card.jsx  slider.jsx
tests/: conftest.py  test_placeholder.py
tests/integration/: test_cli.py
tests/unit/: test_manager.py
